<resources>
    <string name="app_name">GENE&amp;DIET</string>
    <string name="profilename">Name:</string>
    <string name="profileage">AGE:</string>
    <string name="profilegene">GENE:</string>
    <string name="profileweight_kg">WEIGHT(KG):</string>
    <string name="forgot_pasword">forgot pasword</string>
    <string name="not_registered_sign_up_here">Not registered? Sign Up here</string>
    <string name="resetpass">Reset</string>
    <string name="emailpass">Email</string>
    <string name="patient_information">Patient Information</string>
    <string name="patiendid">Choose Patient Id</string>
    <string name="submit">SUBMIT</string>
    <string name="dna_sub_category">DNA sub Category</string>
    <string name="dna_category">DNA Category</string>
    <string name="patient_id">Patient Id</string>
    <string name="doctors_dashboard">Doctors Dashboard</string>
    <string name="dna_a">DNA-A</string>
    <string name="dna_b">DNA-B</string>
    <string name="patient_meal_plan">Patient meal plan</string>
    <string name="protein">PROTEIN</string>
    <string name="starch">STARCH</string>
    <string name="quantity3">Quantity</string>
    <string name="quantity2">Quantity</string>
    <string name="vitamins">VITAMINS</string>
    <string name="quantity1">Quantity</string>
    <string name="value">VALUE</string>
    <string name="dna_c">DNA-C</string>
    <string name="quantyty1">Quantity</string>
    <string name="quantity_2">Quantity</string>
    <string name="quantity_3">Quantity</string>
    <string name="value_b">VALUE</string>
    <string name="value_c">VALUE</string>
    <string name="glycine_max_soybeans">Glycine max(soybeans)</string>
    <string name="submit_doc">SUBMIT</string>

    <string-array name="values">
        <item>DNA-value</item>
        <item>0.009</item>
        <item>0.1</item>
        <item>0.2</item>
        <item>0.3</item>
        <item>0.4</item>
        <item>0.5</item>
        <item>0.6</item>
        <item>0.7</item>
        <item>0.8</item>
        <item>0.9</item>
    </string-array>

    <string-array name="quantity">
        <item>(gm)</item>
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
        <item>35</item>
        <item>40</item>
    </string-array>

</resources>
    <!--  <string-array name="DNA_A">
            <item>ARHGAP31</item>
            <item>BAP1</item>
            <item>BMPR1A</item>
            <item>CAVIN1</item>
            <item>CEP290</item>
        </string-array>
        <string-array name="DNA_B">
            <item>CHD7</item>
            <item>BCR</item>
            <item>BMPR2</item>
            <item>CCM2</item>
            <item>CHM</item>
        </string-array>
        <string-array name="DNA_C">
            <item>APOB</item>
            <item>CEP57</item>
            <item>CLN5</item>
            <item>CLN6</item>
            <item>CLN8</item>
        </string-array>
        <string-array name="PROTEIN">
            <item>Glycine max(soybeans)</item>
            <item>Vicia faba(beans)</item>
            <item>Trigonella foenum-graecum(Fenugreek)</item>

        </string-array>
        <string-array name="STARCH">
            <item>Camellia sinensis(Tea)</item>
            <item>Cinnamomum verum(cinammon)</item>
        </string-array>
        <string-array name="VITAMINS">
            <item>Vitis vinifera(grapes)</item>
            <item>Laurus nobilis(greans)</item>
            <item>Citrus sinensis(Lemon)</item>
            <item>Brassica oleracea(cabbages)</item>
            <item>Origanum vulgare(mint)</item>
        </string-array>-->
