<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DocHome"
    android:orientation="vertical"
    android:paddingBottom="6dp"
    android:paddingLeft="18dp"
    android:paddingRight="18dp"
    android:paddingTop="6dp">
    <TextView
        android:id="@+id/patientinfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="85dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="85dp"
        android:layout_marginBottom="50dp"
        android:text="@string/patient_information" />

    <TextView
        android:id="@+id/Patientid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="85dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="85dp"
        android:layout_marginBottom="10dp"
        android:text="Patient Name" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         />
    <View
        android:layout_width="match_parent"
        android:layout_marginStart="85dp"
        android:layout_marginEnd="85dp"
        android:layout_height="1dp"
        android:background="@color/orange"
        />
    <TextView
        android:id="@+id/DNACAT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="85dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="85dp"
        android:layout_marginBottom="10dp"
        android:text="@string/dna_category" />
    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <View
        android:layout_width="match_parent"
        android:layout_marginStart="85dp"
        android:layout_marginEnd="85dp"
        android:layout_height="1dp"
        android:background="@color/orange"
        />
    <TextView
        android:id="@+id/dnasubcat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="85dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="85dp"
        android:layout_marginBottom="10dp"
        android:text="@string/dna_sub_category" />
    <Spinner
        android:id="@+id/spinner3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <View
        android:layout_width="match_parent"
        android:layout_marginStart="85dp"
        android:layout_marginEnd="85dp"
        android:layout_height="1dp"
        android:background="@color/orange"
        />
    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="85dp"
        android:layout_marginStart="85dp"
        android:layout_marginTop="8dp"
        android:text="@string/submit"
        android:background="@color/orange"
        android:textColor="@color/black"
        />
</LinearLayout>