<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Userprofile"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingLeft="18dp"
    android:paddingRight="18dp"
    android:paddingTop="16dp">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ImageView
                android:layout_width="200sp"
                android:layout_height="200sp"
                android:id="@+id/profileimagedp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="60dp"
                android:padding="16dp"
                android:src="@mipmap/ic_launcher_round" />
            <TextView
                android:id="@+id/profilename"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="85dp"
                android:layout_marginStart="85dp"
                android:layout_marginTop="9dp"
                android:ems="10"
                android:text="@string/profilename"
                android:textSize="28sp">
            </TextView>
            <View
                android:layout_width="match_parent"
                android:layout_marginStart="85dp"
                android:layout_marginEnd="85dp"
                android:layout_height="1dp"
                android:background="@color/orange"
                />
            <TextView
                android:id="@+id/profileage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="85dp"
                android:layout_marginStart="85dp"
                android:layout_marginTop="9dp"
                android:ems="10"
                android:text="@string/profileage"
                android:textSize="28sp">
            </TextView>
            <View
                android:layout_width="match_parent"
                android:layout_marginStart="85dp"
                android:layout_marginEnd="85dp"
                android:layout_height="1dp"
                android:background="@color/orange"
                />
            <TextView
                android:id="@+id/profilegene"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="85dp"
                android:layout_marginStart="85dp"
                android:layout_marginTop="9dp"
                android:ems="10"
                android:text="@string/profilegene"
                android:textSize="28sp">
            </TextView>
            <View
                android:layout_width="match_parent"
                android:layout_marginStart="85dp"
                android:layout_marginEnd="85dp"
                android:layout_height="1dp"
                android:background="@color/orange"
                />
            <TextView
                android:id="@+id/profileweight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="85dp"
                android:layout_marginStart="85dp"
                android:layout_marginTop="9dp"
                android:ems="10"
                android:text="@string/profileweight_kg"
                android:textSize="28sp">
            </TextView>
            <View
                android:layout_width="match_parent"
                android:layout_marginStart="85dp"
                android:layout_marginEnd="85dp"
                android:layout_height="1dp"
                android:background="@color/orange"
                />
            <Button
                android:id="@+id/profileupdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="85dp"
                android:layout_marginStart="85dp"
                android:layout_marginTop="8dp"
                android:text="EDIT"
                android:background="@color/orange"
                android:textColor="@color/black"
                />

        </LinearLayout>
    </ScrollView>
</LinearLayout>